add some place holders

--- a/pages/home-page/home-page.html
+++ b/pages/home-page/home-page.html
@@ -1,10 +1,10 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/wxy-scaffold/wxy-scaffold.html">
-<link rel="import" href="../../app/fc-user-list/fc-user-list.html">
+<link rel="import" href="../../app/fc-user-browser/fc-user-browser.html">
 
 <dom-module id="home-page">
   <template>
-    <fc-user-list></fc-user-list>
+    <fc-user-browser></fc-user-browser>
   </template>
 </dom-module>
 
