--- a/app/fc-user-browser/fc-user-browser.html
+++ b/app/fc-user-browser/fc-user-browser.html
@@ -2,6 +2,9 @@
 <link rel="import" href="../../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 
 <dom-module id="fc-user-browser">
+  <style>
+    
+  </style>
   <template>
     <paper-drawer-panel right-drawer>
       <div main>
