--- a/pages/home-page/home-page.html
+++ b/pages/home-page/home-page.html
@@ -4,7 +4,8 @@
 
 <dom-module id="home-page">
   <template>
-    <fc-user-browser></fc-user-browser>
+    <wxy-scaffold>
+    </wxy-scaffold>
   </template>
 </dom-module>
 
