add some place holders

--- a/pages/data-page/data-page.html
+++ b/pages/data-page/data-page.html
@@ -2,7 +2,9 @@
 
 <dom-module id="data-page">
   <template>
-
+    <wxy-scaffold>
+      <fc-dashboard></fc-dashboard>
+    </wxy-scaffold>
   </template>
 </dom-module>
 
