--- a/pages/workout-page/workout-page.html
+++ b/pages/workout-page/workout-page.html
@@ -2,7 +2,10 @@
 
 <dom-module id="workout-page">
   <template>
-
+    <wxy-scaffold>
+      <div class="tool">[[workout.name]]</div>
+      <fc-workout-log workout="{{workout}}"><fc-workout-log>
+    </wxy-scaffold>
   </template>
 </dom-module>
 
