add some place holders

--- a/app/fc-user-list/fc-user-list.html
+++ b/app/fc-user-list/fc-user-list.html
@@ -3,6 +3,11 @@
 
 <dom-module id="fc-user-list">
   <template>
+    <template is="x-repeat" items="[[users]]">
+      <paper-item>
+        <div>[[user.name]]</div>
+      </paper-item>
+    </template>
   </template>
 </dom-module>
 
