--- a/pages/home-page/home-page.html
+++ b/pages/home-page/home-page.html
@@ -5,7 +5,7 @@
 
 <dom-module id="home-page">
   <template>
-    <wxy-jsonapi id="api" url="https://fitconnectapp.appspot.com/api/account/clients"><wxy-jsonapi>
+    <wxy-jsonapi id="api" url="https://fitconnectapp.appspot.com/api/account/clients"></wxy-jsonapi>
     <wxy-scaffold>
       <fc-navigation class="navigation"></fc-navigation>
       <div class="tool">Clients</div>
