--- a/fit-connect-app.html
+++ b/fit-connect-app.html
@@ -13,6 +13,9 @@
     :host {
       --scaffold-right-tool-color: #303F9F;
     }
+    *{
+      font-family: 'Roboto';
+    }
   </style>
   <template>
     <wxy-router key="main">
