--- a/pages/home-page/home-page.html
+++ b/pages/home-page/home-page.html
@@ -1,19 +1,43 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/wxy-scaffold/wxy-scaffold.html">
 <link rel="import" href="../../bower_components/wxy-jsonapi/wxy-jsonapi.html">
+<link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-icons/editor-icons.html">
 <link rel="import" href="../../app/fc-user-list/fc-user-list.html">
+<link rel="import" href="../../app/fc-navigation/fc-navigation.html">
+<link rel="import" href="../../app/fc-user-detail/fc-user-detail.html">
+
 
 <dom-module id="home-page">
+  <link rel="import" type="css" href="home-page.css">
   <template>
     <wxy-jsonapi id="api" url="https://fitconnectapp.appspot.com/api/account/clients"></wxy-jsonapi>
-    <wxy-scaffold>
+    <wxy-scaffold id="host">
       <fc-navigation class="navigation"></fc-navigation>
-      <div class="tool">Clients</div>
-      <fc-user-list controller="[[controller]]"></fc-user-list>
+      <div class="tool fit">
+        <!--TODO: Make logo into a .png-->
+        <div class="horizontal layout center">
+          <div id="logo" class="horizontal layout center center-justified">
+            Fit<span id="large">C</span>onnect
+          </div>
+          <div class="title padding-left">Clients</div>
+          <div class="flex"></div>
+          <iron-icon class="tool-icon" icon="search"></iron-icon>
+          <iron-icon class="tool-icon" icon="today"></iron-icon>
+          <iron-icon class="tool-icon" icon="editor:format-list-bulleted"></iron-icon>
+        </div>
+      </div>
+      <div class="right-tool">
+        <div class="vertical layout">
+          <span class="title">[[selectedUser.name]]</span>
+          <span class="subheader">[[selectedUser.created]]</span>
+        </div>
+      </div>
+      <fc-user-detail controller="[[controller]]" user-id="[[selectedUser.id]]" class="right-drawer"></fc-user-detail>
+      <fc-user-list controller="[[controller]]" selected-user="{{selectedUser}}"></fc-user-list>
       <fc-calendar controller="[[controller]]"></fc-calendar>
       <paper-fab icon="add" on-tap="handleAddTap"></paper-fab>
-      <div class="right-tool">[[selectedUser.name]]</div>
-      <fc-user-detail controller="[[controller]]" user-id="[[selectedUser.id]]" class="right-drawer"></fc-user-detail>
     </wxy-scaffold>
   </template>
 </dom-module>
