--- a/fit-connect-app.html
+++ b/fit-connect-app.html
@@ -7,11 +7,13 @@
 <link rel="import" href="pages/data-page/data-page.html">
 
 <link rel="import" href="bower_components/wxy-scaffold/wxy-scaffold.html">
+<link rel="stylesheet" type="css" href="app.css">
 
 <dom-module id="fit-connect-app">
   <style>
     :host {
-      --scaffold-right-tool-color: #303F9F;
+      --scaffold-right-tool-color: #3AAEEA;
+      --scaffold-tool-color: rgb(64, 190, 255);
     }
     *{
       font-family: 'Roboto';
