--- a/app/fc-user-list/fc-user-list.html
+++ b/app/fc-user-list/fc-user-list.html
@@ -1,38 +1,19 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+  <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+  <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 
 <dom-module id="fc-user-list">
-  <style>
-    paper-item{
-      height: 50px;
-      border-bottom: 1px solid rgb(230,230,230);
-      color: rgb(120,120,120);
-    }
-    .profile-image{
-      width: 40px;
-      height: 40px;
-      border-radius: 40px;
-      margin-left: 10px;
-      margin-right: 10px;
-      border: 1px solid rgb(200,200,200);
-    }
-    .temp-fab{
-      position: absolute;
-      right: 15px;
-      bottom: 15px;
-      width:45px;
-      height:45px;
-      border-radius: 30px;
-      background-color:rgb(27, 207, 84);
-      font-size: 25px;
-      font-weight: 100;
-    }
-  </style>
+  <link rel="import" type="css" href="fc-user-list.css">
   <template>
-    <template is="x-repeat" items="[[list.data]]">
+    <div class="search-bar horizontal layout center">
+      <iron-icon class="padding-left"icon="search"></iron-icon>
+      <input value="{{clientSearchText}}" placeholder="Search">
+    </div>
+    <template is="x-repeat" items="[[userList]]">
       <paper-item class="horizontal layout center" on-tap="handleItemTap">
         <image class="profile-image" src="../../images/default_profile.png">
-        <div class="flex">[[item.name]]</div>
+        <div class="flex">[[item.username]]</div>
         <iron-icon icon="chevron-right"></iron-icon>
       </paper-item>
     </template>
