--- a/app/fc-navigation/fc-navigation.html
+++ b/app/fc-navigation/fc-navigation.html
@@ -1,8 +1,10 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/social-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/communication-icons.html">
+<link rel="import" href="../../bower_components/iron-localstorage/iron-localstorage.html">
 
 <dom-module id="fc-navigation">
   <style>
@@ -31,6 +33,7 @@
     }
   </style>
   <template>
+    <iron-localstorage id="tokenStorage" name="token" value="{{token}}" ></iron-localstorage>
     <div class="drawer vertical layout fit">
       <template is="x-repeat" items="[[tabs]]">
         <div class="nav-item vertical layout center center-justified" on-tap="onItemTap">
@@ -38,6 +41,8 @@
           <div class$="[[item.class]]">[[item.displayName]]</div>
         </div>
       </template>
+      <div class="flex"></div>
+      <paper-button on-tap="handleLogout">Log Out</paper-button>
     </div>
   </template>
 </dom-module>
