--- a/app/fc-user-list/fc-user-list.html
+++ b/app/fc-user-list/fc-user-list.html
@@ -2,13 +2,34 @@
 <link rel="import" href="../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item-body.html">
 <link rel="import" href="../../bower_components/paper-item/paper-icon-item.html">
+<link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/paper-drawer-panel/paper-drawer-panel.html">
+<link rel="import" href="../ui-full-dialog/ui-full-dialog.html">
 
 <dom-module id="fc-user-list">
   <link rel="import" type="css" href="fc-user-list.css">
   <template>
+    <ui-full-dialog id="addClientDialog" with-backdrop="true">
+      <paper-toolbar class="dialog-toolbar" header>Add Client</paper-toolbar>
+      <paper-item class="padding-top">
+        <paper-item-body two-line>
+          <div class="padding-bottom">Name</div>
+          <input secondary value="{{nameInput::input}}">
+        </paper-item-body>
+      </paper-item>
+      <paper-item>
+        <paper-item-body two-line>
+          <div class="padding-bottom">Email (Optional)</div>
+          <input secondary value="{{emailInput::input}}">
+        </paper-item-body>
+      </paper-item>
+      <paper-button affirmative class="primary-button" on-tap="handleAddClient">OK</paper-button>
+      <paper-button dismissive on-tap="handleCancelTap">Cancel</paper-button>
+    </ui-full-dialog>
+
     <div class="search-bar horizontal layout center">
       <iron-icon class="padding-left"icon="search"></iron-icon>
       <input value="{{clientSearchText}}"
@@ -24,7 +45,7 @@
       </paper-icon-item>
     </template>
     <!--FAB Placeholder-->
-    <div class="temp-fab horizontal layout center center-justified">+</div>
+    <div class="temp-fab horizontal layout center center-justified" on-tap="handleFabTap">+</div>
   </template>
 </dom-module>
 
