--- a/pages/home-page/home-page.html
+++ b/pages/home-page/home-page.html
@@ -14,22 +14,18 @@
 <dom-module id="home-page">
   <link rel="import" type="css" href="home-page.css">
   <template>
-    <!--<wxy-jsonapi id="api" url="https://fitconnectapp.appspot.com/api/account/clients"></wxy-jsonapi>-->
-    <iron-ajax auto url="https://fitconnectapp.appspot.com/api/account/clients"
-        params='{"token":"86c78b2b404dfe9d343b8923c54d399ed80baa2334c2f8da85e4338b450a61a892e5abb37a9a90fe804122c2596acbbd805fc909347f340ecb27b3a6f840543c"}'
-        handle-as="json" last-response="{{clientResponse}}"></iron-ajax>
+    <wxy-jsonapi id="api"></wxy-jsonapi>
     <wxy-scaffold id="host">
-      <fc-navigation class="navigation" selected="clients" router="[[router]]"></fc-navigation>
+      <fc-navigation class="navigation" selected="clients" router="[[router]]" token="{{token}}"></fc-navigation>
       <div class="tool fit">
         <!--TODO: Make logo into a .png-->
         <div class="horizontal layout center">
-          <div id="logo" class="horizontal layout center center-justified">
+          <div id="logo" class="horizontal layout center center-justified" on-tap="handleTest">
             Fit<span id="large">C</span>onnect
           </div>
           <div class="title padding-left"></div>
           <div class="flex"></div>
-          <iron-icon class="tool-icon" icon="today"></iron-icon>
-          <iron-icon class="tool-icon" icon="editor:format-list-bulleted"></iron-icon>
+          <div style="font-size:16px; font-weight:200" class="padding-right">[[user.username]]<iron-icon class="padding-left" icon="expand-more"></iron-icon></div>
         </div>
       </div>
       <div class="right-tool">
@@ -37,9 +33,14 @@
           <span class="title">[[selectedUser.username]]</span>
         </div>
       </div>
-      <fc-user-detail hidden$="[[computeUserDetailHidden(selectedUser)]]" controller="[[controller]]" user-id="[[selectedUser._id]]" class="right-drawer" router="[[router]]"></fc-user-detail>
-      <paper-toolbar class="nav-toolbar">Clients</paper-toolbar>
-      <fc-user-list id="user-list" controller="[[controller]]" selected-user="{{selectedUser}}" user-list="[[clientResponse.data]]"></fc-user-list>
+      <fc-user-detail class="right-drawer" hidden$="[[computeUserDetailHidden(selectedUser)]]" controller="[[controller]]" user-id="[[selectedUser._id]]" router="[[router]]"></fc-user-detail>
+      <paper-toolbar class="nav-toolbar">
+        Clients
+        <div class="flex"></div>
+        <iron-icon class="tool-icon" icon="today"></iron-icon>
+        <iron-icon class="tool-icon" icon="editor:format-list-bulleted"></iron-icon>
+      </paper-toolbar>
+      <fc-user-list id="user-list" controller="[[controller]]" selected-user="{{selectedUser}}" user-list="[[userlist]]" token="[[token]]"></fc-user-list>
       <fc-calendar controller="[[controller]]"></fc-calendar>
       <paper-fab icon="add" on-tap="handleAddTap"></paper-fab>
     </wxy-scaffold>
