--- a/pages/login-page/login-page.html
+++ b/pages/login-page/login-page.html
@@ -2,8 +2,9 @@
 <link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
-<link rel="import" href="../../bower_components/iron-icon/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/wxy-jsonapi/wxy-jsonapi.html">
+<link rel="import" href="../../bower_components/iron-localstorage/iron-localstorage.html">
 
 <dom-module id="login-page">
   <style>
@@ -28,11 +29,6 @@
       padding: 5px;
       width: 250px;
     }
-    .primary-button{
-      background-color: rgb(70, 144, 208);
-      color: white;
-      margin-top: 25px
-    }
     #logo{
       margin-top: 20px;
       font-size: 20px;
@@ -44,18 +40,19 @@
     }
   </style>
   <template>
-    <wxy-jsonapi id="api" url="https://fitconnectapp.appspot.com/api/account/clients"></wxy-jsonapi>
+    <iron-localstorage name="token" value="{{token}}"></iron-localstorage>
+    <wxy-jsonapi id="api"></wxy-jsonapi>
     <div class="main vertical layout fit center">
       <div id="logo" class="horizontal layout center center-justified">
         Fit<span id="large">C</span>onnect
       </div>
       <div id="login-dialog" class="vertical layout center center-justified" style$="{{computeDialogStyle(signup)}}">
         <div hidden$="[[!signup]]" class="padding-top">Full Name </div>
-        <input hidden$="[[!signup]]" class="padding-bottom" value="{{nameInput::input}}">
+        <input spellcheck="false" hidden$="[[!signup]]" class="padding-bottom" value="{{nameInput::input}}">
         <div class="padding-bottom padding-top"> Email Address </div>
-        <input class="padding-bottom" value="{{emailInput::input}}">
+        <input spellcheck="false" class="padding-bottom" value="{{emailInput::input}}">
         <div class="padding-bottom"> Password </div>
-        <input value="{{passwordInput::input}}">
+        <input type="password" spellcheck="false" value="{{passwordInput::input}}">
         <paper-button hidden$="[[signup]]" class="primary-button" on-tap="handleLoginTap">Login</paper-button>
         <paper-button class="padding-top" on-tap="handleSignupTap" style$="{{computeSignupStyle(signup)}}">Sign Up</paper-button>
         <paper-button hidden$="[[!signup]]" class="padding-top" on-tap="handleBackTap">Back</paper-button>
