Add workout-history-list and replace temp fab with paper fab

--- a/app/fc-user-list/fc-user-list.html
+++ b/app/fc-user-list/fc-user-list.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item-body.html">
 <link rel="import" href="../../bower_components/paper-item/paper-icon-item.html">
@@ -44,8 +45,7 @@
         <iron-icon icon="chevron-right"></iron-icon>
       </paper-icon-item>
     </template>
-    <!--FAB Placeholder-->
-    <div class="temp-fab horizontal layout center center-justified" on-tap="handleFabTap">+</div>
+    <paper-fab class="temp-fab" icon="add" on-tap="handleFabTap"></paper-fab>
   </template>
 </dom-module>
 
