--- a/app/fc-workout-list/fc-workout-list.html
+++ b/app/fc-workout-list/fc-workout-list.html
@@ -1,8 +1,9 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
 
 <dom-module id="fc-workout-list">
   <template>
-    <h4>Test Workout List</h4>
+    <paper-fab class="temp-fab" icon="add" on-tap="handleAddTap"></paper-fab>
   </template>
 </dom-module>
 
