--- a/app/fc-workout-log/fc-workout-log.html
+++ b/app/fc-workout-log/fc-workout-log.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="fc-exercise-entry/fc-exercise-entry.html">
 
 <dom-module id="fc-workout-log">
@@ -14,7 +16,7 @@
         <fc-exercise-entry exercise="{{item}}"></fc-exercise-entry>
       </template>
     </div>
-    <div class="temp-fab horizontal layout center center-justified" on-click="_addExercise">+</div>
+    <paper-fab class="temp-fab" icon="add" on-tap="handleFabTap"></paper-fab>
   </template>
 </dom-module>
 
